<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home" />

    <item
        android:id="@+id/navigation_inspection"
        android:icon="@drawable/ic_inspection"
        android:title="@string/Inspection" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/Camera" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_notes"
        android:title="@string/Notes" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/Setting" />

</menu>
