<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:textDirection="locale"
    tools:context="com.coretal.carinspection.activities.MainActivity">

    <Button
        android:id="@+id/btn_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@xml/round_button"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/user_input"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_v_plate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/v_plate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_user_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_user_input"
        app:layout_constraintTop_toTopOf="@+id/btn_user_input" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="label_v_plate,button"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspect_month"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/month_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@xml/spinner_bg"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspect_date"
                    android:textSize="18sp" />

                <com.coretal.carinspection.controls.DateEditText
                    android:id="@+id/edit_inspect_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:drawableEnd="@android:drawable/ic_menu_my_calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspect_valid_until"
                    android:textSize="18sp" />

                <com.coretal.carinspection.controls.DateEditText
                    android:id="@+id/edit_inspect_valid_until_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:drawableEnd="@android:drawable/ic_menu_my_calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspector"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/inspector_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@xml/spinner_bg"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Vehicle Make"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/vehicle_make"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_type"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/vehicle_type"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_subtype"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/vehicle_subtype"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_details_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/vehicle_details"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_odometer"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/current_odometer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_location"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/inspection_location_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@xml/round_button"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>