<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@xml/shadow_radius_bg">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/submission"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"/>

        <com.evrencoskun.tableview.TableView
            android:id="@+id/submission_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:column_header_height="40dp"
            app:row_header_width="40dp"
            app:selected_color="@color/lightGray"
            app:shadow_color="@color/lightGray"
            app:unselected_color="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:background="@xml/shadow_radius_bg">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/log_file"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="100"
            android:textSize="18sp"
            android:scrollbars = "vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_email"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_weight="1"
            android:background="@xml/round_button"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_erase"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/erase"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_weight="1"
            android:background="@xml/round_button"
            />
    </LinearLayout>
</LinearLayout>